Bug 298875 align=right should not be applied to input elements with a type other than image patch by martijn.martijn@gmail.com r=bz sr=bz a=asa